add get-track-staff functionality
